# blockSQP

./: CMakeLists.txt  README.md
include/: blocksqp_defs.hpp  blocksqp_method.hpp  blocksqp_stats.hpp
